# piou-loss-centerNetOBB-inference-with-C-plus-plus

./: CMakeLists.txt  PostProcess.cpp  PostProcess.h  README.md  main.cpp
train_scripts/: ctrdet_oban_dla34_epoch240_resolution_1024.sh  ctrdet_oban_dlav0_34.sh
